# MemoryPack-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.NETBenchmark/MemoryPackBenchmark/: Program.cs
.NETBenchmark/RustBenchmark/: Cargo.toml
.NETBenchmark/RustBenchmark/benches/: memorypack_bench.rs
.NETBenchmark/RustBenchmark/examples/: memorypack_profile.rs
.github/workflows/: bench.yml  profile.yml
memorypack/: Cargo.toml
memorypack-benchmarks/dotnet-benchmarks/: Program.cs  dotnet-benchmarks.csproj
memorypack-benchmarks/rust-benchmarks/: Cargo.toml
memorypack-benchmarks/rust-benchmarks/benches/: memorypack_bench.rs
memorypack-benchmarks/rust-benchmarks/examples/: get_asm.rs  memorypack_profile.rs
memorypack-derive/: Cargo.toml
memorypack-derive/src/: attributes.rs  circular.rs  enums.rs  helpers.rs  lib.rs  regular.rs  unions.rs  version_tolerant.rs
memorypack/src/: collections.rs  error.rs  lib.rs  reader.rs  serializer.rs  state.rs  traits.rs  varint.rs  writer.rs
memorypack/src/traits/: collections.rs  datetime.rs  extended.rs  math.rs  mod.rs  multidim.rs  options.rs  primitives.rs  smart_ptrs.rs  strings.rs  tuples.rs
