[package]
name = "memorypack-derive"
version = "1.1.0"
edition = "2024"
license = "MIT"
description = "Derive macros for memorypack serialization"
documentation = "https://docs.rs/memorypack" 
homepage = "https://github.com/Deathemonic/MemoryPack-rs"
repository = "https://github.com/Deathemonic/MemoryPack-rs"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

