[package]
name = "memorypack"
version = "1.0.0"
edition = "2024"

[dependencies]
byteorder = { workspace = true }
thiserror = { workspace = true }
eyre = "0.6"
memorypack-derive = { path = "../memorypack-derive", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
hashbrown = { version = "0.16", features = ["serde"] }
simdutf8 = "0.1.5"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eyre = "0.6"

[features]
default = ["derive", "serde"]
derive = ["memorypack-derive"]
nightly = []

