[package]
name = "memorypack-benchmark"
version = "0.1.0"
edition = "2021"

[features]
dhat-heap = ["dhat"]

[dependencies]
memorypack = { path = "../../memorypack" }
dhat = { version = "0.3", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "memorypack_bench"
harness = false
