[package]
name = "memorypack-benchmark"
version = "0.0.1"
edition = "2024"

[features]
dhat-heap = ["dhat"]

[dependencies]
memorypack = { path = "../../memorypack" }
dhat = { version = "0.3", optional = true }
hashbrown = { version = "0.16", features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "memorypack_bench"
harness = false
